Changes for developHanner branch

--- a/Bibdle Front/src/App.css
+++ b/Bibdle Front/src/App.css
@@ -1,13 +1,13 @@
 .App{
-    margin-top: 60px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     color: rgb(255, 244, 213);
     font-family:'Cascadia Code';
-    gap: 20px;
     text-align: center;
+
+    background-image: url("");
 }
 
 .game{
@@ -17,4 +17,5 @@
     justify-content: center;
     gap: 20px;
 }
+
 
