--- a/Bibdle Front/src/index.css
+++ b/Bibdle Front/src/index.css
@@ -8,6 +8,11 @@
 }
 
 body {
+    background-image: url('./assets/Background.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-color: rgb(58, 42, 21);
     margin: 0;
     padding: 0;
