--- a/Bibdle Front/src/App.css
+++ b/Bibdle Front/src/App.css
@@ -6,7 +6,7 @@
     color: rgb(255, 244, 213);
     font-family:'Cascadia Code';
     text-align: center;
-
+    width: 100%;
     background-image: url("");
 }
 
