--- a/Bibdle Front/src/components/Header/Header.css
+++ b/Bibdle Front/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header {
-  width: 100vw;
+  width: 100%;
   background-color: #3a2a15;
   padding: 1rem 2rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -9,7 +9,7 @@
 }
 
 .header-container {
-  max-width: 100vw;
+  max-width: 100%;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
